Changelog
=========

4.6-dev - (unreleased)
----------------------

4.5 - (2012-03-05)
------------------
 * Bug fix: properly link resources in css file [tiberich #4956]

4.4 - (2011-12-02)
------------------

4.3 - (2011-11-30)
------------------
* Change: Disabled location portlet since discomap service is not working anymore. 
   [demarant]
* Change: changed the link to faceted search since its location has moved,
   necessary since we now do not show navigation on faceted. [demarant]

4.2 - (2011-11-28)
------------------
* Bug fix: Required themes and subject is handled by EEAContentTypes
  [voineali #4694]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
 * Change: Migrated eea_soer.css.dtml from custom [szabozo0 #4161]
 * Change: Removed obsolete related items, now replaced by viewlets [demarant #4541]
 * Bug fix: decode to utf-8 the Country keywords [tiberich #4424] (v1.18 backport)
 * Bug fix: fix @@rdf view for country profiles [tiberich #4532] (v1.19 backport)
 * TODO: plone4, change code that uses portal_squid to plone.app.caching logic
 * Bugfix: Fixed IE JS errors, fixed code that uses jQuery to avoid conflicts
   with other JS frameworks [szabozo0 #4542]
 * Change: removed the old themes portlet, now part of the main template as viewlet
 * Feature: Added upgrade steps
  [voineali #4392]
 * Feature: Plone 4.0.4 compatible release
  [ghicaale #4300]

1.17 - (2011-04-01)
-------------------
 * Cleanup: removed PloneRSSPortlet [voineali #4169]

1.16 - (2011-03-09)
-------------------
 * Change: surpressed pylint violations that aren't fixable [ichimdav #4140]

1.15 - (2011-03-07)
-------------------
 * Change: started cleaning up package for pylint violations [ichimdav #4140]
 * Bug fix: use alsoProvides instead of directlyProvides when marking Images with the ISoerFigure interface [tiberich #4135]

1.14 - (2011-02-18)
-------------------
 * Change: replaced thickbox with fancybox [ichimdav #3773]
